testsuite/single/tests/compiler/fail/bad_utf8_literial.lpc
// missing surrogate
string test1 = "\uD83C";

// invalid string
string test2 = "\uXX";
string test3 = "\UZZZXSDF";
